# lion-os

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  server.py  sessions.db  setup.sh  test_api.py
config/: apiconfig.development.yaml  modelconfig.development.yaml
docs/api_reference/: action-api.md  element-docs.md  id-system-docs.md  models-api-reference.md
examples/: api_test.py  basic_usage.py
lion/: settings.py
lion/api/: __init__.py  agent_api.py
lion/core/: form.py  models.py
lion/core/action/: action_manager.py  function_calling.py  tool.py
lion/core/config/: README.md  __init__.py  api.py  base.py  branch_config.py  id_config.py  imodel_config.py  init_config.py  log_config.py  manager.py  model.py  retry_config.py
lion/core/forms/: agent_forms.py  form.py
lion/core/generic/: log.py  log_manager.py
lion/core/session/: branch.py  (+3 more)
lion/libs/: parse.py
lion/operations/: __init__.py  forms.py  report.py  utils.py
lion/operator/: __init__.py
notebooks/: agent_patterns.ipynb  getting_started.ipynb  plan.ipynb  plan_usage.ipynb  select.ipynb
tests/test_algo/: test_string_similarity.py
tests/test_libs_data_handlers/: test_nfilter.py  test_nget.py  test_ninsert.py  test_npop.py  test_nset.py  test_to_dict.py  test_to_list.py  test_to_num.py  test_to_str.py  test_util.py
tests/test_operations/: test_brainstorm.py  test_imports.py  test_plan.py  test_select.py
tests/test_parse/: test_as_readable.py  test_fuzzy_parse_json.py
tests/test_validate/: test_validate_boolean.py  test_validate_keys.py  test_validate_mapping.py
(+73 files in other folders)
